--- a/Views/OrderAdmin/Index.cshtml
+++ b/Views/OrderAdmin/Index.cshtml
@@ -15,7 +15,7 @@
 </script>
     }
 @{
-    var orders = (IList<OrderRecord>)Model.Orders;
+    var orders = (IList<OrderRecordPart>)Model.Orders;
     Layout.Title = T("Orders");
 }
 <table class="items" summary="@T("This is a table of the orders of the current customer in your application")">
@@ -63,7 +63,7 @@
             </td>
             <td style="text-align: right">@order.SubTotal.ToString("c")
             </td>
-            <td>@order.CreatedAt
+            <td>@(order.CreatedAt.HasValue ? order.CreatedAt.Value.ToLocalTime().ToString(): "")
             </td>
             <td>@order.PaidAt
             </td>
