--- a/Views/CustomerAdmin/ListOrders.cshtml
+++ b/Views/CustomerAdmin/ListOrders.cshtml
@@ -1,4 +1,4 @@
-﻿@model IList<Cascade.WebShop.Models.OrderRecordPart>
+﻿@model IList<Cascade.WebShop.Models.OrderPart>
 @Script.Require("jQuery")
 @using (Script.Foot())
 { 
