--- a/Views/OrderAdmin/Index.cshtml
+++ b/Views/OrderAdmin/Index.cshtml
@@ -15,7 +15,7 @@
 </script>
     }
 @{
-    var orders = (IList<OrderRecordPart>)Model.Orders;
+    var orders = (IList<OrderPart>)Model.Orders;
     Layout.Title = T("Orders");
 }
 <table class="items" summary="@T("This is a table of the orders of the current customer in your application")">
