--- a/Views/Parts/OrderRecord.cshtml
+++ b/Views/Parts/OrderRecord.cshtml
@@ -1,10 +1,10 @@
 ﻿
 <article>
-    <h2>Order Record Part</h2>
-    @Model.OrderRecordPart.PreferredDays
-    @Model.OrderRecordPart.CreatedAt
+    <h2>Order Part</h2>
+    @Model.OrderPart.PreferredDays
+    @Model.OrderPart.CreatedAt
 
-    @Model.ContentItem.OrderRecordPart.PreferredDays
-    @Model.ContentItem.OrderRecordPart.CreatedAt
+    @Model.ContentItem.OrderPart.PreferredDays
+    @Model.ContentItem.OrderPart.CreatedAt
 
 </article>
