--- a/Views/Checkout.Login.cshtml
+++ b/Views/Checkout.Login.cshtml
@@ -6,34 +6,36 @@
 
     Style.Require("Cascade.WebShop.Common");
 }
-<h2>@T("Returning customer")</h2>
-@Html.ValidationSummary()
-@using (Html.BeginFormAntiForgeryPost(Url.Action("Login", "Checkout", new { area = "Cascade.WebShop" }), FormMethod.Post, new { @class = "form-horizontal" }))
-{
-    <div class="control-group">
-        <div class="controls">
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <h2>@T("Returning customer")</h2>
             <p>@T("Please sign in:")</p>
+            @Html.ValidationSummary()
         </div>
     </div>
+    @using (Html.BeginFormAntiForgeryPost(Url.Action("Login", "Checkout", new { area = "Cascade.WebShop" }), FormMethod.Post, new { @class = "form-horizontal" }))
+    {
+        <div class="form-group">
+            <div class="control-label col-sm-2">@Html.LabelFor(m => login.Email, T("Email"))</div>
+            <div class="col-sm-10">@Html.TextBoxFor(m => login.Email, new { @class = "form-control" })</div>
+        </div>
+        <div class="form-group">
+            <div class="control-label col-sm-2">@Html.LabelFor(m => login.Password, T("Password"))</div>
+            <div class="col-sm-10">@Html.PasswordFor(m => login.Password, new { @class = "form-control" })</div>
+        </div>
+        <div class="form-group">
+            <div class="control-label col-sm-2">@Html.LabelFor(m => login.Password, @T("Remember me"))</div>
+            <div class="col-sm-10">
+                <label class="forcheckbox">
+                    @Html.CheckBoxFor(m => login.CreatePersistentCookie, new { @class = "form-control" })
+                </label>
+            </div>
+        </div>
+        <div class="forms-actions">
+            <a class="btn btn-info" href="#">@T("Cancel")</a>
+            <button type="submit" class="pull-right btn btn-primary">@T("Sign in")</button>
+        </div>
+    }
+</div>
 
-    <div class="control-group">
-        <div class="control-label">@Html.LabelFor(m => login.Email, T("Email"))</div>
-        <div class="controls">@Html.EditorFor(m => login.Email)</div>
-    </div>
-    <div class="control-group">
-        <div class="control-label">@Html.LabelFor(m => login.Password, T("Password"))</div>
-        <div class="controls">@Html.EditorFor(m => login.Password)</div>
-    </div>
-    <div class="control-group">
-        <div class="controls">
-            <label class="checkbox">
-                @Html.CheckBoxFor(m => login.CreatePersistentCookie)@T("Remember me next time")</label>
-        </div>
-    </div>
-    <div class="forms-actions">
-        <div class="controls">
-            <a class="btn" href="#">@T("Cancel")</a>
-            <button type="submit" class="btn btn-primary">@T("Sign in")</button>
-        </div>
-    </div>
-}
