--- a/Views/EditorTemplates/Address.cshtml
+++ b/Views/EditorTemplates/Address.cshtml
@@ -1,9 +1,9 @@
 ﻿@model Cascade.WebShop.ViewModels.AddressViewModel
 @{
     string title = ViewData.ModelMetadata.GetDisplayName();
-    for(int i = 1; i < title.Length; i++)
+    for (int i = 1; i < title.Length; i++)
     {
-        if( title[i] >= 'A' && title[i] <= 'Z')
+        if (title[i] >= 'A' && title[i] <= 'Z')
         {
             title = title.Insert(i, " ");
             i++;
@@ -11,37 +11,33 @@
     }
 }
 
-<style>
-    /* pull control-groups closer together (default bottom-margin: 18px) */
-    .tight
-    {
-        margin-bottom: 2px !important;
-    }
-</style>
-
 <h4>@title</h4>
-<div class="control-group tight">
-    <div class="control-label">@Html.LabelFor(m => m.Name, T("Name"))</div>
-    <div class="controls">@Html.EditorFor(m => m.Name)</div>
+<div class="form-group">
+    <label class="col-sm-2 control-label" for="@Html.FieldIdFor(m=>m.Name)">
+        @T("Name")
+    </label>
+    <div class="col-sm-10">
+        @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+    </div>
 </div>
-<div class="control-group tight">
-    <div class="control-label">@Html.LabelFor(m => m.Address, T("Address"))</div>
-    <div class="controls multiline">@Html.EditorFor(m => m.Address)</div>
+<div class="form-group">
+    <div class="col-sm-2 control-label">@Html.LabelFor(m => m.Address, T("Address"))</div>
+    <div class="col-sm-10">@Html.TextBoxFor(m => m.Address, new { @class = "form-control" })</div>
 </div>
-<div class="control-group tight">
-    <div class="control-label">@Html.LabelFor(m => m.City, T("City"))</div>
-    <div class="controls">@Html.EditorFor(m => m.City)</div>
+<div class="form-group">
+    <div class="col-sm-2 control-label">@Html.LabelFor(m => m.City, T("City"))</div>
+    <div class="col-sm-10">@Html.TextBoxFor(m => m.City, new { @class = "form-control" })</div>
 </div>
-<div class="control-group tight">
-    <div class="control-label">@Html.LabelFor(m => m.State, T("State"))</div>
-    <div class="controls">@Html.EditorFor(m => m.State)</div>
+<div class="form-group">
+    <div class="col-sm-2 control-label">@Html.LabelFor(m => m.State, T("State"))</div>
+    <div class="col-sm-10 ">@Html.TextBoxFor(m => m.State, new { @class = "form-control" })</div>
 </div>
-<div class="control-group tight">
-    <div class="control-label">@Html.LabelFor(m => m.Postcode, T("Postcode"))</div>
-    <div class="controls">@Html.EditorFor(m => m.Postcode)</div>
+<div class="form-group ">
+    <div class="col-sm-2 control-label">@Html.LabelFor(m => m.Postcode, T("Postcode"))</div>
+    <div class="col-sm-10">@Html.TextBoxFor(m => m.Postcode, new { @class = "form-control" })</div>
 </div>
-<div class="control-group tight">
-    <div class="control-label">@Html.LabelFor(m => m.CountryCode, T("Country"))</div>
-    <div class="controls">@Html.DropDownListFor(m => m.CountryCode, new SelectList(Model.CountryCodes, "Value", "Text", Model.CountryCode))</div>
+<div class="form-group ">
+    <div class="col-sm-2 control-label">@Html.LabelFor(m => m.CountryCode, T("Country"))</div>
+    <div class="col-sm-10">@Html.DropDownListFor(m => m.CountryCode, new SelectList(Model.CountryCodes, "Value", "Text", Model.CountryCode), new { @class = "form-control" })</div>
 </div>
 
